--- a/views/index.ejs
+++ b/views/index.ejs
@@ -33,7 +33,7 @@
                 <div class="col-12 col-md-6 pt-4 p-3 p-xl-4 align-items-center mt-4 ">
                     <div class="row usnForm m-1 m-lg-5 p-md-5 " style="max-width:500px ">
                         <h4 class="text-left ">Student Achievement</h4>
-                        <p>One stop destination to save all you Achievements</p>
+                        <p>One stop destination to save all your Achievements</p>
                         <div style="color:red; ">
                             <%= error %>
                         </div>
